--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "Frames/download.png"
+        "Frames/Frames.png"
       ],
       "matches": [
         "<all_urls>"
